<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Thanasis Georgiou
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <!-- General -->
    <string name="app_name">Icy Monitor</string>
    <string name="activity_title_picker">Edit…</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- Overview -->
    <string name="os">OS</string>
    <string name="history">History</string>
    <string name="uptime">Uptime</string>
    <string name="hostname">Hostname: %1$s</string>
    <string name="arch">%1$s-bit Operating System</string>
    <string name="temp_history">Temperature history since %1$s</string>
    <string name="uptime_since">It\'s been\n%1$s days, %2$s hours and %3$s minutes\nsince last reboot.</string>
    <string name="uptime_lastreboot">Last reboot happened on %1$s at %2$s.</string>
    <string name="graph_temperature">Temperature</string>
    <string name="graph_time">Time</string>
    <!-- Pull to refresh -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <!-- Connection Activity Multi Selection -->
    <plurals name="computerSelected">
        <item quantity="zero">Nothing selected</item>
        <item quantity="one">One computer selected</item>
        <item quantity="other">%d computers selected</item>
    </plurals>
    <plurals name="deleteComputers">
        <item quantity="one">Delete this computer?</item>
        <item quantity="other">Delete these computers?</item>
    </plurals>
    <!-- Main -->
    <string name="fragment_temperatures">Temperatures</string>
    <string name="fragment_fans">Fans</string>
    <string name="fragment_voltages">Voltages</string>
    <string name="fragment_power">Power</string>
    <string name="fragment_clock">Clock</string>
    <string name="fragment_load">Load</string>
    <!-- Content descriptions -->
    <string name="content_desc_computericon">Computer icon</string>
    <string name="decorative_icon">Decorative icon</string>
    <!-- Color picker -->
    <string name="name">Name: </string>
    <string-array name="default_color_values">
        <item>Custom</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Orange</item>
    </string-array>
    <!-- Disk info -->
    <string name="drive">Drive %1$s</string>
    <string name="label">Label: %1$sGB</string>
    <string name="size">Size: %1$sGB</string>
    <string name="free">Free: %1$sGB</string>
    <string name="format">Format: %1$s</string>
    <string name="loading">Loading…</string>
    <string name="disks_empty_list">Could not connect\nTap here to retry</string>
    <!-- Processes -->
    <string name="used_memory">Used Memory: %1$sMB</string>
    <string name="total_memory">Total Memory: %1$sMB</string>
    <!-- Menu items -->
    <string name="menu_main_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_main_about">About</string>
    <string name="menu_keep_screen_on">Keep screen on</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_confirm">Confirm</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_server">Add server</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="menu_sort_by_usage">Sort by usage</string>
    <string name="menu_github">Find me on Github</string>
    <string name="menu_contact">Contact me</string>
    <string name="menu_help">Help</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_newest_first">Newest first</string>
    <string name="menu_sort_oldest_first">Oldest first</string>
    <string name="menu_setup_notifications">Setup notifications</string>
    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="setting_refresh_rate">Graph refresh rate</string>
    <string-array name="setting_refresh_rate_array">
        <item>Every 5 seconds</item>
        <item>Every 3 seconds</item>
        <item>Every 2 seconds</item>
        <item>Every 1 seconds</item>
        <item>Every 0.5 seconds</item>
        <item>Every 0.25 seconds</item>
    </string-array>
    <string-array name="setting_refresh_rate_values">
        <item>5000</item>
        <item>3000</item>
        <item>2000</item>
        <item>1000</item>
        <item>500</item>
        <item>250</item>
    </string-array>
    <string name="setting_line_width">Line width</string>
    <string-array name="setting_line_width_array">
        <item>1px</item>
        <item>2px</item>
        <item>3px</item>
        <item>4px</item>
    </string-array>
    <string-array name="setting_line_width_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="setting_grid_x">Show X grid lines</string>
    <string name="setting_grid_y">Show Y grid lines</string>
    <string name="setting_cat_graphs">Graphs</string>
    <string name="setting_cat_notifications">Notifications</string>
    <string name="setting_notifications_sound">Sound</string>
    <string name="setting_notifications_vibrate">Vibrate</string>
    <string name="setting_notifications_light">LED Light</string>
    <!-- Delete list item dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Delete this computer?</string>
    <!-- Connection Activity -->
    <string name="empty_list">Add a computer using the + button</string>
    <string name="error_could_not_connect">Make sure your network connection is working and that the server software is running on the host and try again.</string>
    <string name="error_authentication">Server rejected this device. Try \nre-adding this host or disabling authentication in the server software.</string>
    <string name="error_could_not_connect_title">Could not connect</string>
    <string name="error_outdated_server_long">This host is running an outdated version of the server software. Please check for updates and try again.</string>
    <string name="error_outdated_server_update">This host is running an outdated version of the server software. You can update by right clicking the tray icon and selecting “Check for updates”.</string>
    <string name="error_invalid_response_long">Invalid response received. Try restarting the server and making sure nothing else runs on the same port.</string>
    <!-- Add new server activity -->
    <string-array name="type_spinner_values">
        <item>Desktop</item>
        <item>Laptop</item>
        <item>Server</item>
    </string-array>
    <string name="button_add">Add</string>
    <string name="check_computer">Check your computer for the confirmation dialog.</string>
    <string name="detect_server">Searching for servers…\nMight take up to 30 seconds.</string>
    <string name="button_manual">Manual</string>
    <string name="server_name">Server Name:</string>
    <string name="server_address">Server Address:</string>
    <string name="server_icon">Icon:</string>
    <string name="hint_name">Enter a name</string>
    <string name="hint_address">Enter the host address</string>
    <string name="connecting">Connecting…</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_could_not_reach_host">Could not reach host</string>
    <string name="error_outdated_server">Incompatible server version</string>
    <string name="error_invalid_response">Invalid response received</string>
    <string name="error_empty_address">Empty address</string>
    <string name="error_empty_name">Empty name</string>
    <string name="error_empty_port">Empty port</string>
    <string name="error_rejected">Rejected by server</string>
    <string name="port">Port</string>
    <string name="help_text">Please visit http://sakisds.github.io/Icy-Monitor/ from your computer and follow the instructions on how to setup the server.</string>
    <!-- Uptime -->
    <string name="days"> Days</string>
    <string name="minutes"> Minutes</string>
    <string name="hours"> Hours</string>
    <string name="its_been">It\'s been…</string>
    <string name="since_boot">since last boot.</string>
    <string name="last_refresh">Last refresh on</string>
    <string name="error_no_refresh">Could not refresh data</string>
    <!-- History -->
    <string name="startAt">%1$s - %2$s</string>
    <string name="endAt">Until:  %1$s</string>
    <string name="reset">Reset</string>
    <string name="history_disabled">History is disabled\nYou can enable it at your server</string>
    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="empty_list_notifications">No notifications prepared.\nAdd a new one using the + button.</string>
    <string name="menu_add_notification">Add Notification</string>
    <string name="menu_test_notification">Send test notification</string>
    <string name="notif_condition">Value %1$s %2$s</string>
    <string name="sensor">Sensor:</string>
    <string name="condition">Condition:</string>
    <string name="adding_notification">Adding notification...</string>
    <string name="notif_ring_once">Notify only once</string>
    <string name="notif_ring_once_help">If this option is checked, the notification will ring once when the sensor value meets the specified condition and will not ring again until the sensor value stops meeting the condition.\n
Otherwise, the notification will keep ringing (roughly every 2.5 seconds) while the sensor value satisfies the specified condition.</string>
    <plurals name="notificationSelected">
        <item quantity="zero">Nothing selected</item>
        <item quantity="one">One notification selected</item>
        <item quantity="other">%d notifications selected</item>
    </plurals>
    <string-array name="condition_spinner">
        <item>≥</item>
        <item>≤</item>
    </string-array>
    <string-array name="device_spinner">
        <item>System</item>
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string-array name="type_spinner_system">
        <item>Temperature</item>
        <item>Fan</item>
        <item>Voltage</item>
    </string-array>
    <string-array name="type_spinner_gpu">
        <item>Temperature</item>
        <item>Fan</item>
        <item>Load</item>
        <item>Clock</item>
    </string-array>
    <string-array name="type_spinner_cpu">
        <item>Temperature</item>
        <item>Power</item>
        <item>Load</item>
        <item>Clock</item>
    </string-array>
    <string name="error_empty_value">This field cannot be empty</string>
    <string name="retrieving_devices">Retrieving devices…</string>
</resources>