<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Thanasis Georgiou
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_resume_pause"
        android:title="@string/menu_pause"
        android:icon="@drawable/ic_action_pause"
        android:showAsAction="always" />
    <item
        android:id="@+id/item_clear"
        android:showAsAction="ifRoom"
        android:title="@string/menu_clear"
        android:icon="@drawable/ic_action_delete" />

    <item
        android:id="@+id/item_keep_screen_on"
        android:title="@string/menu_keep_screen_on"
        android:checkable="true" />

</menu>