<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Thanasis Georgiou
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    tools:context=".AddServerActivity"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView_type"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:contentDescription="@string/content_desc_computericon"
            android:layout_alignTop="@+id/spinner_type"
            android:layout_alignParentRight="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_name"
            android:hint="@string/hint_name"
            android:layout_below="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_address"
            android:hint="@string/hint_address"
            android:inputType="textUri"
            android:layout_below="@+id/textView2"
            android:layout_toLeftOf="@+id/textView3"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/spinner_type"
            android:entries="@array/type_spinner_values"
            android:layout_below="@+id/editText_address"
            android:layout_toLeftOf="@+id/imageView_type"
            android:layout_toRightOf="@+id/textView4" />

        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText_port"
            android:layout_alignTop="@+id/editText_address"
            android:layout_alignRight="@+id/editText_name"
            android:text="28622"
            android:hint="@string/port" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/server_name"
            android:id="@+id/textView"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/server_address"
            android:id="@+id/textView2"
            android:layout_below="@+id/editText_name"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=":"
            android:id="@+id/textView3"
            android:layout_alignBaseline="@+id/editText_port"
            android:layout_alignBottom="@+id/editText_port"
            android:layout_toLeftOf="@+id/editText_port" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/server_icon"
            android:id="@+id/textView4"
            android:layout_alignBottom="@+id/spinner_type"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText_address"
            android:gravity="center" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/button_add"
        android:id="@+id/button_add"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:textColor="@android:color/primary_text_light" />

</LinearLayout>