<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/editText_name"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_picker_default_title"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <com.sakisds.icymonitor.views.colorpicker.ColorPickerPalette
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/colorpalette"
                android:layout_margin="8dp"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:id="@+id/button_cancel"
            android:textColor="@android:color/primary_text_light"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:text="@string/menu_cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:id="@+id/button_confirm"
            android:textColor="@android:color/primary_text_light"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:text="@string/menu_confirm" />

    </LinearLayout>

</LinearLayout>